--- a/.travis.yml
+++ b/.travis.yml
@@ -39,15 +39,14 @@ before_install:
     - export PATH="$HOME/miniconda/bin:$PATH"
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
-    conda config --add channels mjirik
-    conda config --add channels conda-forge
+    - conda config --add channels mjirik
+    - conda config --add channels conda-forge
     - conda update -q conda
     # Useful for debugging any issues with conda
     - conda info -a
 
 # command to install dependencies
 install:
-
     - conda install --yes pip nose coverage
 #    - Install dependencies
     - conda install --yes -c SimpleITK -c luispedro -c mjirik --file requirements_conda.txt
