--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.0.4
-files = setup.py meta.yaml
+files = setup.py meta.yaml imma/__init__.py
 commit = True
 tag = True
 tag_name = {new_version}
