--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+python: 3.6
 os: linux
 # Ubuntu 14.04 Trusty support
 sudo: required
@@ -15,10 +16,12 @@ env:
     - CONDA_PYTHON_VERSION=3.6
 virtualenv:
   system_site_packages: true
+services:
+  - xvfb
 before_script:
     # GUI
     - "export DISPLAY=:99.0"
-    - "sh -e /etc/init.d/xvfb start"
+#    - "sh -e /etc/init.d/xvfb start"
     - sleep 3 # give xvfb sume time to start
 
 before_install:
