--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: 2.7
 os: linux
 # Ubuntu 14.04 Trusty support
-sudo: required
+#sudo: required
 # dist: trusty
 # install new cmake
 #addons:
