--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ os: linux
 #    sources:
 #      - kalakris-cmake
 env:
-    - CONDA_PYTHON_VERSION=2.7
+#    - CONDA_PYTHON_VERSION=2.7
     - CONDA_PYTHON_VERSION=3.6
+    - CONDA_PYTHON_VERSION=3.7
 virtualenv:
   system_site_packages: true
 services:
