--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,13 @@ os: linux
 #    sources:
 #      - kalakris-cmake
 env:
-#    - CONDA_PYTHON_VERSION=2.7
+    - CONDA_PYTHON_VERSION=2.7
     - CONDA_PYTHON_VERSION=3.6
     - CONDA_PYTHON_VERSION=3.7
+matrix:
+  allow_failures:
+    - env: CONDA_PYTHON_VERSION=2.7
+  fast_finish: true
 virtualenv:
   system_site_packages: true
 services:
