scikit-image dependency

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -38,11 +38,13 @@ requirements:
     - setuptools
     - numpy
     - scipy
+    - scikit-image
 
   run:
     - python
     - numpy
     - scipy
+    - scikit-image
     # - numpy
     # - pyqt 4.11.*
 
