--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,8 @@ tag_name = {new_version}
 [nosetests]
 attr = !interactive,!slow,!LAR
 
+[tool:pytest]
+addopts = -m "not interactive and not slow"
+markers =
+    interactive: marks interactive tests
+    slow: marks slow tests
