--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -15,7 +15,8 @@ source:
    # List any patch files here
    # - fix.patch
 
-# build:
+build:
+    noarch: True
   # noarch_python: True
   # preserve_egg_dir: True
   # entry_points:
