--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
    # - fix.patch
 
 build:
-    noarch: True
+    noarch: python
   # noarch_python: True
   # preserve_egg_dir: True
   # entry_points:
