--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_install:
 install:
 #    - conda install --yes pip nose coveralls
 #    - Install dependencies
-    - conda install --yes -c SimpleITK -c luispedro -c mjirik --file requirements_conda.txt pytest-cov
+    - conda install --yes -c SimpleITK -c luispedro -c mjirik --file requirements_conda.txt pytest-cov coveralls
 script: # nosetests --with-coverage --cover-package=imma
 #  - source activate travis
   - python -m pytest --cov=imma/
